p2/confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one-deploy
  labels:
    app: app-one-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: hello-world
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two-deploy
  labels:
    app: app-two-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: hello-world
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three-deploy
  labels:
    app: app-three-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: hello-world
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
