p2/confs/hello-world-pos.yaml
apiVersion: v1
kind: Pod
metadata:
name: hello-world
spec:
containers:
    - name: hello
    image: paulbouwer/hello-kubernetes:1.10
